--- a/mirrorui/stylus/coms/sidemenu.styl
+++ b/mirrorui/stylus/coms/sidemenu.styl
@@ -26,7 +26,8 @@
     // 菜单项选中
     &-item.active
         font-weight: 600
-        background-color: var-black-opa50
+        background-color: var-black-lt
+        color: var-white
     // 菜单组标题
     &-label
         display: block
