增加滑块组件

--- a/mirrorui/index.cshtml
+++ b/mirrorui/index.cshtml
@@ -80,6 +80,7 @@
           <li><a class="sidemenu-item" href="#msgshow">提示框</a></li>
           <li><a class="sidemenu-item" href="#datetime">日期时间</a></li>
           <li><a class="sidemenu-item" href="#pagenum">分页条</a></li>
+          <li><a class="sidemenu-item" href="#range">范围滑块</a></li>
           <li><b class="sidemenu-split"></b></li>
           <li><a class="sidemenu-item" href="#sidemenu">侧边菜单</a></li>
           <li><a class="sidemenu-item" href="#mnavmenu">底部菜单</a></li>
@@ -153,6 +154,8 @@
       @Include("/doc/datetime.part.cshtml")
 
       @Include("/doc/pagenum.part.cshtml")
+
+      @Include("/doc/range.part.cshtml")
 
       @Include("/doc/sidemenu.part.cshtml")
 
