--- a/mirrorui/mirrorui.css
+++ b/mirrorui/mirrorui.css
@@ -2744,6 +2744,34 @@ p {
 .mdirbar .back:active {
   border-color: #ff4500;
 }
+.range-box {
+  display: block;
+  padding-bottom: 20px;
+}
+.range-bar {
+  width: 100%;
+  height: 10px;
+  border-radius: 4px;
+  background-color: var(--color-gray-lt);
+  margin-top: 5px;
+}
+.range-btn {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  background-color: var(--color-gray-dk);
+  border-radius: 50%;
+  margin-top: -5px;
+}
+.range-btn.active {
+  box-shadow: 0px 0px 4px var(--color-black-lt);
+  cursor: grab;
+}
+.range-txt {
+  display: block;
+  width: 20px;
+  text-align: center;
+}
 .pageload {
   display: flex;
   justify-content: center;
