--- a/mirrorui/stylus/index.styl
+++ b/mirrorui/stylus/index.styl
@@ -34,6 +34,7 @@
 @import "coms/msgshow"
 @import "coms/mnavmenu"
 @import "coms/mdirbar"
+@import "coms/range"
 // 6.扩展
 @import "exts/pageload"
 @import "exts/kvpair"
