--- a/mirrorui/mirrorui.css
+++ b/mirrorui/mirrorui.css
@@ -1727,7 +1727,7 @@ p {
   background-color: var(--color-warning);
 }
 .article-title {
-  border-left: 5px solid;
+  border: 6px solid transparent;
   font-weight: 600;
   padding: 0.3em 0 0.3em 1em;
   margin: 1.5em auto;
@@ -2905,8 +2905,38 @@ p {
   display: inline-block;
   width: 1em;
   height: 1em;
-  margin: 0 0.9em 0.1em 0;
   border-radius: 50%;
+  box-shadow: inset -0.4em -0.1em;
+}
+.ico-sun {
+  display: inline-block;
+  position: relative;
+  width: 0.6em;
+  height: 0.6em;
+  color: #ffd700;
+  border-radius: 50%;
+  background-color: #ffd700;
+  box-shadow: inset 0 0 0.15em 0;
+  margin: 0.2em;
+}
+.ico-sun:before,
+.ico-sun:after {
+  content: '';
+  display: inline-block;
+  position: absolute;
+  width: 0.1em;
+  height: 0.1em;
   background-color: transparent;
-  box-shadow: 0.4em 0.1em 0 0;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+}
+.ico-sun:before {
+  box-shadow: 0.45em 0, 0 0.45em, -0.45em 0, 0 -0.45em, 0.38em 0, 0 0.38em, -0.38em 0, 0 -0.38em;
+}
+.ico-sun:after {
+  transform: rotate(45deg);
+  box-shadow: 0.45em 0, 0 0.45em, -0.45em 0, 0 -0.45em, 0.38em 0, 0 0.38em, -0.38em 0, 0 -0.38em;
 }
