--- a/mirrorui/stylus/coms/article.styl
+++ b/mirrorui/stylus/coms/article.styl
@@ -1,6 +1,6 @@
 ﻿// 文章标题
 .article-title
-    border-left: 5px solid
+    border: 6px solid transparent
     font-weight: 600
     padding: 0.3em 0 0.3em 1em
     margin: 1.5em auto
