--- a/mirrorui/stylus/cssicon/icons/moon.styl
+++ b/mirrorui/stylus/cssicon/icons/moon.styl
@@ -4,7 +4,5 @@
     display: inline-block
     width: 1em
     height: 1em
-    margin: 0 .9em .1em 0
     border-radius: 50%
-    background-color: transparent
-    box-shadow: .4em .1em 0 0
+    box-shadow: inset -.4em -.1em
