--- a/mirrorui/mirrorui.css
+++ b/mirrorui/mirrorui.css
@@ -1981,7 +1981,6 @@ p {
   height: 120px;
   padding: 20px;
   background-color: #fff;
-  box-sizing: border-box;
   box-shadow: 2px 2px 16px #000;
 }
 .msgbox-prompt {
@@ -2913,10 +2912,8 @@ p {
   position: relative;
   width: 0.6em;
   height: 0.6em;
-  color: #ffd700;
   border-radius: 50%;
-  background-color: #ffd700;
-  box-shadow: inset 0 0 0.15em 0;
+  box-shadow: inset 0 0 0.5em;
   margin: 0.2em;
 }
 .ico-sun:before,
@@ -2972,4 +2969,30 @@ p {
 }
 .ico-star5:after {
   transform: rotate(144deg);
+}
+.ico-triarr {
+  display: inline-block;
+  width: 0;
+  height: 0;
+  border: 0.5em solid transparent;
+}
+.ico-triarr.down {
+  border-top: 0.866em solid;
+  border-bottom: none;
+  margin: 0.067em 0;
+}
+.ico-triarr.up {
+  border-bottom: 0.866em solid;
+  border-top: none;
+  margin: 0.067em 0;
+}
+.ico-triarr.left {
+  border-right: 0.866em solid;
+  border-left: none;
+  margin: 0 0.067em;
+}
+.ico-triarr.right {
+  border-left: 0.866em solid;
+  border-right: none;
+  margin: 0 0.067em;
 }
