--- a/mirrorui/stylus/cssicon/icons/sun.styl
+++ b/mirrorui/stylus/cssicon/icons/sun.styl
@@ -5,10 +5,8 @@
     position: relative
     width: .6em
     height: .6em
-    color: gold
     border-radius: 50%
-    background-color: gold
-    box-shadow:inset 0 0 .15em 0
+    box-shadow:inset 0 0 .5em
     margin: .2em
 .ico-sun:before, .ico-sun:after
     content: ''
