--- a/mirrorui/stylus/cssicon/icons/sun.styl
+++ b/mirrorui/stylus/cssicon/icons/sun.styl
@@ -8,20 +8,20 @@
     border-radius: 50%
     box-shadow:inset 0 0 .5em
     margin: .2em
-.ico-sun:before, .ico-sun:after
-    content: ''
-    display: inline-block
-    position: absolute
-    width: .1em
-    height: .1em
-    background-color: transparent
-    top: 0
-    bottom: 0
-    left: 0
-    right: 0
-    margin: auto
-.ico-sun:before
-    box-shadow: .45em 0, 0 .45em, -.45em 0, 0 -.45em, .38em 0, 0 .38em, -.38em 0, 0 -.38em
-.ico-sun:after
-    transform: rotate(45deg)
-    box-shadow: .45em 0, 0 .45em, -.45em 0, 0 -.45em, .38em 0, 0 .38em, -.38em 0, 0 -.38em
+    &:before, &:after
+        content: ''
+        display: inline-block
+        position: absolute
+        width: .1em
+        height: .1em
+        background-color: transparent
+        top: 0
+        bottom: 0
+        left: 0
+        right: 0
+        margin: auto
+    &:before
+        box-shadow: .45em 0, 0 .45em, -.45em 0, 0 -.45em, .38em 0, 0 .38em, -.38em 0, 0 -.38em
+    &:after
+        transform: rotate(45deg)
+        box-shadow: .45em 0, 0 .45em, -.45em 0, 0 -.45em, .38em 0, 0 .38em, -.38em 0, 0 -.38em
