--- a/mirrorui/mirrorui.css
+++ b/mirrorui/mirrorui.css
@@ -3022,3 +3022,31 @@ p {
   width: 4px;
   height: 1em;
 }
+.ico-minus {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 1em;
+  height: 1em;
+}
+.ico-minus:before {
+  content: '';
+  display: inline-block;
+  width: 1em;
+  height: 4px;
+  box-shadow: inset 4px 4px;
+}
+.ico-menu {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 1em;
+  height: 1em;
+}
+.ico-menu:before {
+  content: '';
+  display: inline-block;
+  width: 1em;
+  height: 0.16em;
+  box-shadow: inset 0.16em 0.16em, 0 0.32em, 0 -0.32em;
+}
