--- a/mirrorui/stylus/cssicon/icons/menu.styl
+++ b/mirrorui/stylus/cssicon/icons/menu.styl
@@ -13,4 +13,6 @@
         width: 1em
         height: .16em
         box-shadow: inset .16em .16em,0 .32em,0 -.32em
-    
+    // 3个点菜单,就是改width就可
+    &.dot:before
+        width: .16em
