--- a/mirrorui/stylus/cssicon/base.styl
+++ b/mirrorui/stylus/cssicon/base.styl
@@ -3,5 +3,7 @@
 // ================================
 
 .ico
+    // 图片默认都是块级行内元素
+    display: inline-block
     pointer-events: none
     vertical-align: middle
