--- a/mirrorui/mirrorui.css
+++ b/mirrorui/mirrorui.css
@@ -2912,8 +2912,8 @@ p {
   width: 0.6em;
   height: 0.6em;
   border-radius: 50%;
-  box-shadow: inset 0 0 0.5em;
   margin: 0.2em;
+  background-color: currentColor;
 }
 .ico-sun:before,
 .ico-sun:after {
@@ -3009,7 +3009,7 @@ p {
   top: 0;
   bottom: 0;
   margin: auto;
-  box-shadow: inset 4px 4px;
+  background-color: currentColor;
 }
 .ico-plus:before {
   width: 1em;
@@ -3031,7 +3031,7 @@ p {
   display: inline-block;
   width: 1em;
   height: 4px;
-  box-shadow: inset 4px 4px;
+  background-color: currentColor;
 }
 .ico-menu {
   display: inline-flex;
