--- a/mirrorui/stylus/cssicon/icons/minus.styl
+++ b/mirrorui/stylus/cssicon/icons/minus.styl
@@ -12,5 +12,5 @@
         display: inline-block
         width:1em
         height:4px
-        box-shadow: inset 4px 4px
+        background-color: currentColor
     
