--- a/mirrorui/stylus/cssicon/icons/plus.styl
+++ b/mirrorui/stylus/cssicon/icons/plus.styl
@@ -14,7 +14,7 @@
         top: 0
         bottom: 0
         margin: auto
-        box-shadow: inset 4px 4px
+        background-color: currentColor
 
     &:before
         width: 1em
