--- a/mirrorui/stylus/cssicon/icons/sun.styl
+++ b/mirrorui/stylus/cssicon/icons/sun.styl
@@ -5,8 +5,8 @@
     width: .6em
     height: .6em
     border-radius: 50%
-    box-shadow:inset 0 0 .5em
     margin: .2em
+    background-color: currentColor
     &:before, &:after
         content: ''
         display: inline-block
