--- a/mirrorui/mirrorui.css
+++ b/mirrorui/mirrorui.css
@@ -3115,3 +3115,20 @@ p {
   transform-origin: 0 0;
   transform: rotate(45deg);
 }
+.ico-disabled {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 1em;
+  height: 1em;
+  border: 0.08em solid currentColor;
+  border-radius: 50%;
+}
+.ico-disabled:before {
+  content: '';
+  display: inline-block;
+  width: 1em;
+  height: 0.08em;
+  background-color: currentColor;
+  transform: rotate(45deg);
+}
