--- a/mirrorui/mirrorui.css
+++ b/mirrorui/mirrorui.css
@@ -1227,7 +1227,7 @@ h6 {
 }
 p {
   margin: 0 0 16px;
-  line-height: 2em;
+  line-height: 1.8em;
 }
 .line {
   height: 1px;
@@ -1732,6 +1732,7 @@ p {
   padding: 0.3em 0 0.3em 1em;
   margin: 1.2em auto;
   border-left-color: var(--color-gray-dk);
+  line-height: 1;
 }
 .article-title.primary {
   border-left-color: var(--color-primary);
