--- a/mirrorui/stylus/coms/article.styl
+++ b/mirrorui/stylus/coms/article.styl
@@ -5,6 +5,7 @@
     padding: 0.3em 0 0.3em 1em
     margin: 1.2em auto
     border-left-color: var-gray-dk
+    line-height: 1;
 // 颜色
 for key, val in $themeColorsKV
     .article-title.{key}
