--- a/mirrorui/mirrorui.css
+++ b/mirrorui/mirrorui.css
@@ -3162,3 +3162,26 @@ p {
   width: 0.14em;
   height: 0.4em;
 }
+.ico-bookmark {
+  display: inline-flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 1em;
+  height: 1em;
+}
+.ico-bookmark:before,
+.ico-bookmark:after {
+  content: '';
+  display: inline-block;
+}
+.ico-bookmark:before {
+  width: 0.6em;
+  height: 0.4em;
+  background-color: currentColor;
+}
+.ico-bookmark:after {
+  border-style: solid;
+  border-width: 0 0.3em 0.4em;
+  border-color: transparent currentColor;
+}
