--- a/mirrorui/mirrorui.css
+++ b/mirrorui/mirrorui.css
@@ -3321,3 +3321,23 @@ p {
   border-radius: 50%;
   background-color: currentColor;
 }
+.ico-lock {
+  display: inline-flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.ico-lock:before {
+  width: 0.6em;
+  height: 0.4em;
+  border-radius: 50% 50% 0 0/50% 50% 0 0;
+  border: 0.1em solid currentColor;
+  border-bottom: none;
+}
+.ico-lock:after {
+  width: 0.8em;
+  height: 0.4em;
+  border-color: currentColor;
+  border-style: solid;
+  border-width: 0.19em 0.32em;
+}
