--- a/mirrorui/mirrorui.css
+++ b/mirrorui/mirrorui.css
@@ -3341,3 +3341,28 @@ p {
   border-style: solid;
   border-width: 0.19em 0.32em;
 }
+.ico-flag {
+  position: relative;
+}
+.ico-flag:before,
+.ico-flag:after {
+  position: absolute;
+}
+.ico-flag:before {
+  left: 0.15em;
+  top: 0.1em;
+  width: 0.08em;
+  height: 0.9em;
+  background-color: currentColor;
+  border-radius: 0.04em 0.04em 0 0/0.04em 0.04em 0 0;
+}
+.ico-flag:after {
+  left: 0.2em;
+  top: 0.2em;
+  width: 0.4em;
+  height: 0.4em;
+  border-radius: 0 0.05em;
+  background-color: currentColor;
+  box-shadow: 0.24em 0.12em;
+  transform: rotate(5deg);
+}
