--- a/mirrorui/stylus/cssicon/icons/star5.styl
+++ b/mirrorui/stylus/cssicon/icons/star5.styl
@@ -12,13 +12,11 @@
         border-style: solid
         border-color: transparent
         border-bottom: 0
-        border-top-color: initial
+        border-top-color: currentColor
         transform-origin: calc(0.951 * .53em) calc(0.31 * .53em)
 
     &:before, &:after
         position: absolute
-        top: 0
-        left: 0
         top: calc(-0.726 * calc(0.951 * .53em))
         left: calc(-0.951 * .53em)
     &:before
